[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word_forge"
version = "0.1.0"
description = "Eidosian Word Forge - Lexical Data Processing and Enrichment."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lloyd Handyside", email = "ace1928@gmail.com" },
    { name = "Eidos", email = "syntheticeidos@gmail.com" },
]
keywords = ["lexicon", "nlp", "vocabulary", "semantics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nltk>=3.6.0",
    "torch>=2.1.0",
    "transformers>=4.39.0",
    "networkx>=3.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
word-forge = "word_forge.forge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/word_forge"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]